add deploy script and gh-pages

--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "blog_app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://jelenabircevic.github.io/bit-persons",
   "dependencies": {
+    "gh-pages": "^1.1.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-router": "^4.2.0",
@@ -10,6 +12,7 @@
     "react-scripts": "1.1.1"
   },
   "scripts": {
+    "deploy" : "npm run build&&gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
